[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["wisarmy <wisarmy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wisarmy/config-rs"
description = "A simple config control tool support read from file and write to file"
keywords = ["config", "toml", "json", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tracing = "0.1.37"
macros = { path = "./macros", version = "0.1.0" }
toml = "0.7.2"

[workspace]
members = ["macros"]
