[package]
name = "sconfig-macros"
version = "0.1.2"
edition = "2021"
authors = ["wisarmy <wisarmy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wisarmy/sconfig"
description = "Macros for sconfig"
keywords = ["sconfig", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde_json = "1.0.94"
syn = { version = "1.0.108", features = ["extra-traits"] }
toml = "0.7.2"
toml_edit = "0.19.9"
tracing = "0.1.37"
